chore(Linting): linted the entire backend